--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -46,7 +46,7 @@ Better Webhook provides two independent tools that solve these problems:
 | Test webhooks locally without exposing ports | CLI  |
 | Replay captured webhooks during debugging    | CLI  |
 | Use pre-built webhook templates              | CLI  |
-| Visual dashboard for webhook management      | CLI  |
+| Install as native binary via Homebrew/Go    | CLI  |
 | Type-safe webhook handlers in production     | SDK  |
 | Automatic signature verification             | SDK  |
 | Zod schema validation for payloads           | SDK  |
