--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -58,3 +58,11 @@ Better Webhook provides two independent tools that solve these problems:
 **Building webhook handlers?** → [Get started with the SDK](/docs/sdk)
 
 Both tools work great together but are completely independent. Use whichever fits your needs.
+
+## Additional Guides
+
+- [Security](/docs/security) — Signature verification, secret handling, and replay protection
+- [Troubleshooting](/docs/troubleshooting) — Common setup and runtime fixes
+- [FAQ](/docs/faq) — Quick answers for common questions
+- [Contributing](/docs/contributing) — Local workflow and contribution standards
+- [Release Policy](/docs/release-policy) — SDK/CLI release mechanics and versioning
