--- a/apps/docs/content/docs/sdk/adapters.mdx
+++ b/apps/docs/content/docs/sdk/adapters.mdx
@@ -10,6 +10,12 @@ import { Callout } from "fumadocs-ui/components/callout";
 
 Adapters convert the webhook builder into framework-specific handlers. Each adapter handles the request/response lifecycle and passes the raw body for signature verification.
 
+## Focused Guides
+
+- [NestJS Adapter](/docs/sdk/nestjs-adapter)
+- [GCP Functions Adapter](/docs/sdk/gcp-functions-adapter)
+- [Adapter Options](/docs/sdk/adapter-options)
+
 ## Next.js
 
 <Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
