--- a/apps/docs/content/docs/sdk/providers.mdx
+++ b/apps/docs/content/docs/sdk/providers.mdx
@@ -10,6 +10,11 @@ import { Callout } from "fumadocs-ui/components/callout";
 
 Providers define the webhook source, including event types, payload schemas, and signature verification.
 
+## Focused Guides
+
+- [Custom Providers](/docs/sdk/custom-providers)
+- [Replay and Idempotency](/docs/sdk/replay-idempotency)
+
 ## GitHub
 
 <Tabs groupId="package-manager" items={["npm", "pnpm", "yarn"]}>
