feat: add configuration documentation and link in CLI footer
This commit introduces a new documentation page for CLI configuration, detailing the use of config files, environment variables, and command flags. It also updates the command reference to include a link to the new configuration page and adds a "Configuration" link in the footer for easier navigation. These enhancements improve user guidance on setting up and managing CLI configurations.

--- a/apps/docs/content/docs/cli/commands.mdx
+++ b/apps/docs/content/docs/cli/commands.mdx
@@ -7,6 +7,23 @@ import { Callout } from "fumadocs-ui/components/callout";
 
 # Command Reference
 
+For configuration keys, path precedence, and environment variable details, see [Configuration](/docs/cli/configuration).
+
+## Global Options
+
+These options apply to all commands:
+
+| Option                  | Description |
+| ----------------------- | ----------- |
+| `--config <path>`       | Path to config TOML file |
+| `BETTER_WEBHOOK_CONFIG_PATH` | Environment variable alternative to `--config` |
+
+Initialize a default config file:
+
+```bash
+better-webhook init
+```
+
 ## capture
 
 Start a standalone server to capture incoming webhooks.
