--- a/apps/docs/content/docs/cli/index.mdx
+++ b/apps/docs/content/docs/cli/index.mdx
@@ -137,4 +137,5 @@ Templates include proper headers and can generate valid signatures when you prov
 ## Next Steps
 
 - [Command Reference](/docs/cli/commands) — Full documentation for all CLI commands
+- [Configuration](/docs/cli/configuration) — Config file structure, env overrides, and precedence
 - [Templates](/docs/cli/templates) — Learn about available templates and how to use them
