docs: update CLI commands for template management
This commit modifies the documentation to reflect changes in CLI commands for managing templates. The command `better-webhook templates local` is updated to `better-webhook templates list --local`, and a new command `better-webhook templates delete <template-id>` is introduced for deleting local templates. These updates enhance clarity and usability for users managing templates.

--- a/apps/docs/content/docs/cli/commands.mdx
+++ b/apps/docs/content/docs/cli/commands.mdx
@@ -152,7 +152,10 @@ better-webhook templates download github-push
 better-webhook templates download --all
 
 # List local templates
-better-webhook templates local
+better-webhook templates list --local
+
+# Delete a local template
+better-webhook templates delete github-push
 
 # Search templates
 better-webhook templates search github
