--- a/apps/docs/content/docs/cli/templates.mdx
+++ b/apps/docs/content/docs/cli/templates.mdx
@@ -104,7 +104,15 @@ better-webhook templates download --all
 View templates you've downloaded:
 
 ```bash
-better-webhook templates local
+better-webhook templates list --local
+```
+
+### Delete a Local Template
+
+Delete one downloaded template by exact ID:
+
+```bash
+better-webhook templates delete github-push
 ```
 
 ### Search Templates
