feat: add refresh option for template downloads and improve CLI feedback
This commit introduces a `--refresh` flag for the `better-webhook templates download --all` command, allowing users to refresh the index and re-download existing templates. The documentation is updated to clarify the behavior of the download command when templates are already present. Additionally, tests are added to ensure the correct handling of the refresh functionality, enhancing user experience and feedback in the CLI.

--- a/apps/docs/content/docs/cli/commands.mdx
+++ b/apps/docs/content/docs/cli/commands.mdx
@@ -153,6 +153,9 @@ better-webhook templates download github-push
 # Download all templates
 better-webhook templates download --all
 
+# Refresh index and re-download templates
+better-webhook templates download --all --refresh
+
 # List local templates
 better-webhook templates list --local
 
